jump to row and stop animation

--- a/public/css/bl.css
+++ b/public/css/bl.css
@@ -2159,6 +2159,7 @@ a {
     position: relative;
     font-size: 12pt;
     margin-top: 10px;
+    padding-bottom: 15px;
 }
 
 .accountlang{
